p2/configs/config-webapp1-deployment.yaml
apiVersion: apps/v1   
kind: Deployment    
metadata:            
  name: webapp1-deployment    
  labels:        
    app: webapp1   
spec:            
  replicas: 1    
  selector:       
    matchLabels: 
      app: webapp1
  template:        
    metadata:
      labels:    
        app: webapp1
    spec:        
      containers:    
      - name: webapp1
        image: yrimah/webapp1:v1.0    
        ports:
          - containerPort: 80
