p2/configs/config-webapp1-dep-serv.yaml
apiVersion: apps/v1   
kind: Deployment    
metadata:            
  name: webapp1-deployment    
  labels:        
    app: webapp1   
spec:            
  replicas: 1    
  selector:       
    matchLabels: 
      app: webapp1
  template:        
    metadata:
      labels:    
        app: webapp1
    spec:        
      containers:    
      - name: webapp1
        image: yrimah/webapp1:v1.0    
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-service
spec:
  selector:
    app: webapp1
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30001
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: webapp1-ingress
# spec:
#   rules:
#     - host: app1.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: webapp1-service
#                 port:
#                   number: 80
