p2/configs/config-webapp2-dep-serv.yaml
apiVersion: apps/v1   
kind: Deployment    
metadata:            
  name: webapp2-deployment    
  labels:        
    app: webapp2   
spec:            
  replicas: 3    
  selector:       
    matchLabels: 
      app: webapp2
  template:        
    metadata:
      labels:    
        app: webapp2
    spec:        
      containers:    
      - name: webapp2
        image: yrimah/webapp2:v1.0    
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-service
spec:
  selector:
    app: webapp2
  # type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 30002
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: webapp2-ingress
# spec:
#   rules:
#     - host: app2.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: webapp2-service
#                 port:
#                   number: 80
