p2/configs/config-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapps-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp1-service
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp2-service
                port:
                  number: 80
    - host: app3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp3-service
                port:
                  number: 80
    # - host: ""
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: webapp3-service
    #             port:
    #               number: 80
  defaultBackend:
    service:
      name: webapp3-service
      port:
        number: 80
